--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rob G. Coutenceau | Derecho digital y administrativo</title>
+<meta name="description" content="Asesoramiento legal en derecho digital, protección de datos personales y derecho administrativo">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
