--- a/public/index.html
+++ b/public/index.html
@@ -3,43 +3,51 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <title>Rob G. Coutenceau | Derecho digital y administrativo</title>
+
+    <!-- SEO básico -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Asesoramiento legal en derecho digital, protección de datos personales y derecho administrativo (CABA)."
     />
+
+    <!-- Open Graph (WhatsApp / Facebook / LinkedIn) -->
+    <meta
+      property="og:title"
+      content="Rob G. Coutenceau | Derecho digital y administrativo"
+    />
+    <meta
+      property="og:description"
+      content="Asesoramiento legal en derecho digital, protección de datos personales y derecho administrativo (CABA)."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://robgcoutenceau.com/" />
+    <meta property="og:image" content="https://robgcoutenceau.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter (opcional, suma) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Rob G. Coutenceau | Derecho digital y administrativo"
+    />
+    <meta
+      name="twitter:description"
+      content="Asesoramiento legal en derecho digital, protección de datos personales y derecho administrativo (CABA)."
+    />
+    <meta name="twitter:image" content="https://robgcoutenceau.com/og-image.jpg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Rob G. Coutenceau | Derecho digital y administrativo</title>
-<meta name="description" content="Asesoramiento legal en derecho digital, protección de datos personales y derecho administrativo">
-
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Necesitás habilitar JavaScript para ver este sitio.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
